Испарвлены title, добавлена страница успешного заказа без ошибки оплаты

--- a/order-paid.html
+++ b/order-paid.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Контакты —  ТехноЗум.рф</title>
+    <title>Заказ оплачен — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -190,80 +190,132 @@
             <a class="breadcrumbs__menu__item__link" href="/">Технозум</a>
           </li>
           <li class="breadcrumbs__menu__item breadcrumbs__menu__item--active">
-            Контакты
+            Заказ оформлен
           </li>
         </ul>
       </section>
-      <section class="contacts section wrapper--global">
-        <h1>Санкт-Петербург</h1>
-        <div class="contacts__info">
-          <span class="contacts__info__item icon--address">ул. 1-ая Советская, д.&nbsp;6, корпус&nbsp;2, оф.&nbsp;208</span>
-          <span class="contacts__info__item icon--metro">Станция метро &laquo;Площадь&nbsp;Восстания&raquo;</span>
-          <span class="contacts__info__item icon--phone change_phone">
-            <a class="contacts__info__item__link" href="tel:+78122431885">+7 812-243-18-85</a>
-          </span>
-          <span class="contacts__info__item icon--email">
-            <a class="contacts__info__item__link" href="mailto:spb@tehnozum.ru">spb@tehnozum.ru</a>
-          </span>
-          <span class="contacts__info__item icon--days">Понедельник&mdash;воскресенье</span>
-          <span class="contacts__info__item icon--hours">11:00&mdash;20:00</span>
-        </div>
-        <div class="contacts__info__map" id="contacts__info__map"></div>
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95f762cd1b2901d9765805705d3a5c157235081e11f563b4d8b358b06b0ce2bc&amp;width=100%25&amp;height=100%&amp;id=contacts__info__map&amp;lang=ru_RU&amp;scroll=true"></script>
+      <section class="success_heading section wrapper--global">
+        <h1>Ваш заказ <span class="success_heading__number">№ S-0508I13UT6776</span> принят</h1>
+        <div class="success_heading__message">Менеджер свяжется с вами для уточнения деталей заказа</div>
+        <img class="success_heading__image" src="../images/clap.svg" />
       </section>
-      <section class="route section wrapper--global">
-        <h2>Как найти пункт выдачи заказов Технозум в Петербурге</h2>
-        <div class="route__details">
-          <div class="route__details__map">
-            <img class="route__details__map__image" src="./images/contacts/pvz-route.jpg" />
+      <section class="success_order_info section wrapper--global">
+        <div class="success_order_info__main">
+          <span class="success_order_info__main__number">№ S-0508I13UT6776</span>
+          <span class="success_order_info__main__date">от 27.06.2022</span>
+          <span class="success_order_info__main__status">В обработке</span>
+        </div>
+        <div class="success_order_info__summary">
+          <div class="success_order_info__summary__delivery">
+            <span class="success_order_info__summary__delivery__heading success_order_info__summary__heading">Доставка:</span>
+            <ul class="success_order_info__summary__delivery__info">
+              <li class="success_order_info__summary__delivery__info__item">
+                <span class="success_order_info__summary__delivery__info__item__name">Город</span>
+                <span class="success_order_info__summary__delivery__info__item__dots"></span>
+                <span class="success_order_info__summary__delivery__info__item__value">Санкт-Петербург</span>
+              </li>
+              <li class="success_order_info__summary__delivery__info__item">
+                <span class="success_order_info__summary__delivery__info__item__name">Адрес</span>
+                <span class="success_order_info__summary__delivery__info__item__dots"></span>
+                <span class="success_order_info__summary__delivery__info__item__value">ул. 1-ая Советская, д.6,
+                  корпус 2, оф. 208</span>
+              </li>
+              <li class="success_order_info__summary__delivery__info__item">
+                <span class="success_order_info__summary__delivery__info__item__name">Комментарий</span>
+                <span class="success_order_info__summary__delivery__info__item__dots"></span>
+                <span class="success_order_info__summary__delivery__info__item__value">Комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий</span>
+              </li>
+            </ul>
           </div>
-          <div class="route__details__step">
-            <span class="circle_bg--black">1</span> Пройдите между 6 и 8 домами 1-й Советской улицы
-            <img class="route__details__step__image" src="./images/contacts/pvz-step1.jpg" />
+          <div class="success_order_info__summary__payment">
+            <span class="success_order_info__summary__payment__heading success_order_info__summary__heading">Оплата:</span>
+            <ul class="success_order_info__summary__payment__info">
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Способ</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">Картой онлайн</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Статус</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">Оплачен</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Стоимость заказа</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">645 000 ₽</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Стоимость доставки</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">Бесплатно</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Итого</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">645 000 ₽</span>
+              </li>
+            </ul>
           </div>
-          <div class="route__details__step">
-            <span class="circle_bg--black">2</span> Войдите в БЦ «Искра Фонд»
-            <img class="route__details__step__image" src="./images/contacts/pvz-step2.jpg" />
-          </div>
-          <div class="route__details__step">
-            <span class="circle_bg--black">3</span> Поднимитесь на 2-й этаж, cледуйте за указателями «Технозум»
-            <img class="route__details__step__image" src="./images/contacts/pvz-step3.jpg" />
+          <div class="success_order_info__summary__buyer">
+            <span class="success_order_info__summary__buyer__heading success_order_info__summary__heading">Получатель:</span>
+            <ul class="success_order_info__summary__buyer__info">
+              <li class="success_order_info__summary__buyer__info__item">
+                <span class="success_order_info__summary__buyer__info__item__name">Имя</span>
+                <span class="success_order_info__summary__buyer__info__item__dots"></span>
+                <span class="success_order_info__summary__buyer__info__item__value">Юрий</span>
+              </li>
+              <li class="success_order_info__summary__buyer__info__item">
+                <span class="success_order_info__summary__buyer__info__item__name">Телефон</span>
+                <span class="success_order_info__summary__buyer__info__item__dots"></span>
+                <span class="success_order_info__summary__buyer__info__item__value">+ 7 (999) 990-99-99</span>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
-      <section class="utp section wrapper--global">
-        <div class="utp__container">
-          <div class="utp__container__tile">
-            <img class="utp__container__tile__image" src="./images/utp/original.svg" />
-            <span class="utp__container__tile__heading">Оригинальная продукция</span>
-            <span class="utp__container__tile__text">Продаем только оригинальную продукцию популярных мировых брендов.</span>
+      <section class="success_order_contents section wrapper--global">
+        <ul class="success_order_contents__products">
+          <li class="success_order_contents__products__item">
+            <img class="success_order_contents__products__item__image" src="../images/demo/cart/cart-product.png" />
+            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
+            <div class="success_order_contents__products__item__cost">
+              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
+              <span class="success_order_contents__products__item__price">645 000 x 3</span>
+            </div>
+          </li>
+          <li class="success_order_contents__products__item">
+            <img class="success_order_contents__products__item__image" src="../images/demo/cart/cart-product.png" />
+            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
+            <div class="success_order_contents__products__item__cost">
+              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
+              <span class="success_order_contents__products__item__price">645 000 x 3</span>
+            </div>
+          </li>
+          <li class="success_order_contents__products__item">
+            <img class="success_order_contents__products__item__image" src="../images/demo/cart/cart-product.png" />
+            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
+            <div class="success_order_contents__products__item__cost">
+              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
+              <span class="success_order_contents__products__item__price">645 000 x 3</span>
+            </div>
+          </li>
+        </ul>
+        <div class="success_order_contents__summary">
+          <span class="success_order_contents__summary__heading">Товары (2) на сумму 1 290 000 ₽</span>
+          <div class="success_order_contents__summary__detalization">
+            <span class="success_order_contents__summary__detalization__name">Скидка:</span>
+            <span class="success_order_contents__summary__detalization__summ">400 000 ₽</span>
           </div>
-          <div class="utp__container__tile">
-            <img class="utp__container__tile__image" src="./images/utp/doc.svg" />
-            <span class="utp__container__tile__heading">Официальная гарантия</span>
-            <span class="utp__container__tile__text">Соблюдаем закон «О защите прав потребителей», предоставляем все необходимые гарантийные обязательства.</span>
+          <div class="success_order_contents__summary__detalization">
+            <span class="success_order_contents__summary__detalization__name">Скидка по промокоду:</span>
+            <span class="success_order_contents__summary__detalization__summ">400 000 ₽</span>
           </div>
-          <div class="utp__container__tile">
-            <img class="utp__container__tile__image" src="./images/utp/discount.svg" />
-            <span class="utp__container__tile__heading">Низкие цены</span>
-            <span class="utp__container__tile__text">Поддерживаем максимально выгодные предложения.</span>
-          </div>
-          <div class="utp__container__tile">
-            <img class="utp__container__tile__image" src="./images/utp/check.svg" />
-            <span class="utp__container__tile__heading">Контроль качества</span>
-            <span class="utp__container__tile__text">Контролируем качество на каждом этапе: от выбора поставщиков до работы персонала и сервиса.</span>
-          </div>
-          <div class="utp__container__tile">
-            <img class="utp__container__tile__image" src="./images/utp/box.svg" />
-            <span class="utp__container__tile__heading">Самовывоз бесплатно</span>
-            <span class="utp__container__tile__text">Пункт выдачи в центре города. Заказ доступен сразу.</span>
-          </div>
-          <div class="utp__container__tile">
-            <img class="utp__container__tile__image" src="./images/utp/truck.svg" />
-            <span class="utp__container__tile__heading">Быстрая доставка</span>
-            <span class="utp__container__tile__text">Доставим за 1 день.</span>
-          </div>
+          <span class="success_order_contents__summary__heading">Итого: 1 290 000 ₽</span>
         </div>
+      </section>
+      <section class="buy_more section wrapper--global">
+        <a class="buy_more__button button button--black" href="../catalogue.html">Купить что-нибудь еще</a>
       </section>
     </main>
     <footer class="footer">
