--- a/order-success.html
+++ b/order-success.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Главная — ТехноЗум.рф</title>
+    <title>Заказ оформлен — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -201,7 +201,7 @@
       </section>
       <section class="success_unpaid section wrapper--global">
         <div class="success_unpaid__message">По каким-то причинам заказ не был оплачен. Оплатите заказ, чтобы мы взяли его в работу.</div>
-        <a class="success_unpaid__button button button--pink" href="../fail.html">Оплатить</a>
+        <a class="success_unpaid__button button button--pink" href="../order-paid.html">Оплатить</a>
       </section>
       <section class="success_order_info section wrapper--global">
         <div class="success_order_info__main">
