Личный кабинет - адреса доставки, история заказов

--- a/account.html
+++ b/account.html
@@ -76,7 +76,7 @@
                 <span class="header__bottom__container__column__services__item__link link--grey link_icon--search popup__opener" onclick="openDialog('Search');" aria-controls="Search" alt="Поиск">Поиск</s>
               </li>
               <li class="header__bottom__container__column__services__item">
-                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="#">Избранное</a>
+                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="../favourites.html">Избранное</a>
               </li>
               <li class="header__bottom__container__column__services__item">
                 <a class="header__bottom__container__column__services__item__link link--grey link_icon--cart" href="#">Корзина</a>
@@ -197,7 +197,7 @@
       <section class="account section wrapper--global">
         <h1 class="account__heading">Личный кабинет</h1>
         <ul class="account__navigation">
-          <li class="account__navigation__item account__navigation__item--active button">Данные профиля</li>
+          <li class="account__navigation__item button account__navigation__item--active">Данные профиля</li>
           <li class="account__navigation__item button button--white"><a href="../account-address.html">Адреса доставки</a></li>
           <li class="account__navigation__item button button--white"><a href="../account-orders.html">Мои заказы</a></li>
           <li class="account__navigation__item button button--white"><a href="../account-favourites.html">Избранное</a></li>
