--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <span class="header__bottom__container__column__services__item__link link--grey link_icon--search popup__opener" onclick="openDialog('Search');" aria-controls="Search" alt="Поиск">Поиск</s>
               </li>
               <li class="header__bottom__container__column__services__item">
-                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="#">Избранное</a>
+                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="../favourites.html">Избранное</a>
               </li>
               <li class="header__bottom__container__column__services__item">
                 <a class="header__bottom__container__column__services__item__link link--grey link_icon--cart" href="#">Корзина</a>
@@ -208,7 +208,7 @@
               <div class="banner__container__item__content wrapper--global">
                 <div class="banner__container__item__content__heading">Apple Watch 3</div>
                 <div class="banner__container__item__content__text">Надежность и стиль. Теперь в стальном корпусе</div>
-                <a class="banner__container__item__content__button button button--pink" href="../category.html">Купить</a>
+                <a class="banner__container__item__content__button button button--pink" href="../category--level2.html">Купить</a>
               </div>
               <img class="banner__container__item__image desktop--block" src="./images/banner.jpg" />
               <img class="banner__container__item__image mobile--block" src="./images/banner-mobile.jpg" />
@@ -237,61 +237,61 @@
       <section class="categories">
         <ul class="categories__tiles section wrapper--global">
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/appliances.png" alt="Бытовая техника" />
               <span class="categories__tiles__item__link__text">Бытовая техника</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/phones.png" alt="Смартфоны и гаджеты" />
               <span class="categories__tiles__item__link__text">Смартфоны и&nbsp;гаджеты</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/pc.png" alt="Компьютеры и ноутбуки" />
               <span class="categories__tiles__item__link__text">Компьютеры и&nbsp;ноутбуки</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/hobby.png" alt="Развлечения и хобби" />
               <span class="categories__tiles__item__link__text">Развлечения и&nbsp;хобби</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/beauty.png" alt="Красота и здоровье" />
               <span class="categories__tiles__item__link__text">Красота и&nbsp;здоровье</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catcatalogueegory.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/tv.png" alt="Телевизоры и аксессуары" />
               <span class="categories__tiles__item__link__text">Телевизоры и&nbsp;аксессуары</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/audio.png" alt="Аудиотехника" />
               <span class="categories__tiles__item__link__text">Аудиотехника</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/photo.png" alt="Фото и видео" />
               <span class="categories__tiles__item__link__text">Фото и&nbsp;видео</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/accessories.png" alt="Аксессуары для смартфонов и гаджетов" />
               <span class="categories__tiles__item__link__text">Аксессуары для&nbsp;смартфонов и&nbsp;гаджетов</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="../category.html">
+            <a class="categories__tiles__item__link" href="../catalogue.html">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/tourism.png" alt="Туризм" />
               <span class="categories__tiles__item__link__text">Туризм</span>
             </a>
