--- a/product.html
+++ b/product.html
@@ -76,7 +76,7 @@
                 <span class="header__bottom__container__column__services__item__link link--grey link_icon--search popup__opener" onclick="openDialog('Search');" aria-controls="Search" alt="Поиск">Поиск</s>
               </li>
               <li class="header__bottom__container__column__services__item">
-                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="#">Избранное</a>
+                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="../favourites.html">Избранное</a>
               </li>
               <li class="header__bottom__container__column__services__item">
                 <a class="header__bottom__container__column__services__item__link link--grey link_icon--cart" href="#">Корзина</a>
@@ -1530,7 +1530,7 @@
         </ul>
       </div>
     </dialog>
-    <dialog class="popup_review popup" aria-label="Заказать в 1 клик" id="OneClick">
+    <dialog class="popup_1click popup" aria-label="Заказать в 1 клик" id="OneClick">
       <div class="popup_1click__container popup__container">
         <span class="popup_1click__container__heading">Заказать в 1 клик</span>
         <span class="popup_1click__container__close icon--close" onclick="closeDialog()"></span>
