--- a/account-address.html
+++ b/account-address.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Заказ оформлен — ТехноЗум.рф</title>
+    <title>Личный кабинет, адреса доставки — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -190,136 +190,50 @@
             <a class="breadcrumbs__menu__item__link" href="/">Технозум</a>
           </li>
           <li class="breadcrumbs__menu__item breadcrumbs__menu__item--active">
-            Заказ оформлен
+            Личный кабинет
           </li>
         </ul>
       </section>
-      <section class="success_heading section wrapper--global">
-        <h1>Ваш заказ <span class="success_heading__number">№ S-0508I13UT6776</span> принят</h1>
-        <div class="success_heading__message">Менеджер свяжется с вами для уточнения деталей заказа</div>
-        <img class="success_heading__image" src="../images/clap.svg" />
+      <section class="account section wrapper--global">
+        <h1 class="account__heading">Личный кабинет</h1>
+        <ul class="account__navigation">
+          <li class="account__navigation__item button button--white"><a href="../account-orders.html">Данные профиля</a></li>
+          <li class="account__navigation__item button account__navigation__item--active">Адреса доставки</li>
+          <li class="account__navigation__item button button--white"><a href="../account-orders.html">Мои заказы</a></li>
+          <li class="account__navigation__item button button--white"><a href="../account-favourites.html">Избранное</a></li>
+        </ul>
       </section>
-      <section class="success_unpaid section wrapper--global">
-        <div class="success_unpaid__message">По каким-то причинам заказ не был оплачен. Оплатите заказ, чтобы мы взяли его в работу.</div>
-        <a class="success_unpaid__button button button--pink" href="../order-paid.html">Оплатить</a>
-      </section>
-      <section class="success_order_info section wrapper--global">
-        <div class="success_order_info__main">
-          <span class="success_order_info__main__number">№ S-0508I13UT6776</span>
-          <span class="success_order_info__main__date">от 27.06.2022</span>
-          <span class="success_order_info__main__status">В обработке</span>
-        </div>
-        <div class="success_order_info__summary">
-          <div class="success_order_info__summary__delivery">
-            <span class="success_order_info__summary__delivery__heading success_order_info__summary__heading">Доставка:</span>
-            <ul class="success_order_info__summary__delivery__info">
-              <li class="success_order_info__summary__delivery__info__item">
-                <span class="success_order_info__summary__delivery__info__item__name">Город</span>
-                <span class="success_order_info__summary__delivery__info__item__dots"></span>
-                <span class="success_order_info__summary__delivery__info__item__value">Санкт-Петербург</span>
-              </li>
-              <li class="success_order_info__summary__delivery__info__item">
-                <span class="success_order_info__summary__delivery__info__item__name">Адрес</span>
-                <span class="success_order_info__summary__delivery__info__item__dots"></span>
-                <span class="success_order_info__summary__delivery__info__item__value">ул. 1-ая Советская, д.6,
-                  корпус 2, оф. 208</span>
-              </li>
-              <li class="success_order_info__summary__delivery__info__item">
-                <span class="success_order_info__summary__delivery__info__item__name">Комментарий</span>
-                <span class="success_order_info__summary__delivery__info__item__dots"></span>
-                <span class="success_order_info__summary__delivery__info__item__value">Комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий</span>
-              </li>
-            </ul>
-          </div>
-          <div class="success_order_info__summary__payment">
-            <span class="success_order_info__summary__payment__heading success_order_info__summary__heading">Оплата:</span>
-            <ul class="success_order_info__summary__payment__info">
-              <li class="success_order_info__summary__payment__info__item">
-                <span class="success_order_info__summary__payment__info__item__name">Способ</span>
-                <span class="success_order_info__summary__payment__info__item__dots"></span>
-                <span class="success_order_info__summary__payment__info__item__value">Картой онлайн</span>
-              </li>
-              <li class="success_order_info__summary__payment__info__item">
-                <span class="success_order_info__summary__payment__info__item__name">Статус</span>
-                <span class="success_order_info__summary__payment__info__item__dots"></span>
-                <span class="success_order_info__summary__payment__info__item__value">Оплачен</span>
-              </li>
-              <li class="success_order_info__summary__payment__info__item">
-                <span class="success_order_info__summary__payment__info__item__name">Стоимость заказа</span>
-                <span class="success_order_info__summary__payment__info__item__dots"></span>
-                <span class="success_order_info__summary__payment__info__item__value">645 000 ₽</span>
-              </li>
-              <li class="success_order_info__summary__payment__info__item">
-                <span class="success_order_info__summary__payment__info__item__name">Стоимость доставки</span>
-                <span class="success_order_info__summary__payment__info__item__dots"></span>
-                <span class="success_order_info__summary__payment__info__item__value">Бесплатно</span>
-              </li>
-              <li class="success_order_info__summary__payment__info__item">
-                <span class="success_order_info__summary__payment__info__item__name">Итого</span>
-                <span class="success_order_info__summary__payment__info__item__dots"></span>
-                <span class="success_order_info__summary__payment__info__item__value">645 000 ₽</span>
-              </li>
-            </ul>
-          </div>
-          <div class="success_order_info__summary__buyer">
-            <span class="success_order_info__summary__buyer__heading success_order_info__summary__heading">Получатель:</span>
-            <ul class="success_order_info__summary__buyer__info">
-              <li class="success_order_info__summary__buyer__info__item">
-                <span class="success_order_info__summary__buyer__info__item__name">Имя</span>
-                <span class="success_order_info__summary__buyer__info__item__dots"></span>
-                <span class="success_order_info__summary__buyer__info__item__value">Юрий</span>
-              </li>
-              <li class="success_order_info__summary__buyer__info__item">
-                <span class="success_order_info__summary__buyer__info__item__name">Телефон</span>
-                <span class="success_order_info__summary__buyer__info__item__dots"></span>
-                <span class="success_order_info__summary__buyer__info__item__value">+ 7 (999) 990-99-99</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-      <section class="success_order_contents section wrapper--global">
-        <ul class="success_order_contents__products">
-          <li class="success_order_contents__products__item">
-            <img class="success_order_contents__products__item__image" src="../images/demo/cart/cart-product.png" />
-            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
-            <div class="success_order_contents__products__item__cost">
-              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
-              <span class="success_order_contents__products__item__price">645 000 x 3</span>
-            </div>
+      <section class="account_addresses section wrapper--global">
+        <ul class="account_addresses__list">
+          <li class="account_addresses__list__item account_addresses__list__item--active">
+            <span class="account_addresses__list__item__heading">Санкт-Петербург</span>
+            <span class="account_addresses__list__item__address">Мебельная улица 19 к 2, подъезд 4, этаж 10, квартира 712</span>
+            <span class="account_addresses__list__item__actions">
+              <span class="account_addresses__list__item__actions__change popup__opener" onclick="openDialog('Delivery')" aria-controls="Delivery" alt="Редактировать адрес доставки">Изменить адрес</span>
+              <span class="account_addresses__list__item__actions__delete popup__opener" onclick="openDialog('DeleteAddress')" aria-controls="DeleteAddress" alt="Удалить адрес доставки">Удалить адрес</span>
+            </span>
           </li>
-          <li class="success_order_contents__products__item">
-            <img class="success_order_contents__products__item__image" src="../images/demo/cart/cart-product.png" />
-            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
-            <div class="success_order_contents__products__item__cost">
-              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
-              <span class="success_order_contents__products__item__price">645 000 x 3</span>
-            </div>
+          <li class="account_addresses__list__item">
+            <span class="account_addresses__list__item__heading">Санкт-Петербург</span>
+            <span class="account_addresses__list__item__address">Суворовский проспект 2 б</span>
+            <span class="account_addresses__list__item__actions">
+              <span class="account_addresses__list__item__actions__change popup__opener" onclick="openDialog('Delivery')" aria-controls="Delivery" alt="Редактировать адрес доставки">Изменить адрес</span>
+              <span class="account_addresses__list__item__actions__delete popup__opener" onclick="openDialog('DeleteAddress')" aria-controls="DeleteAddress" alt="Удалить адрес доставки">Удалить адрес</span>
+            </span>
           </li>
-          <li class="success_order_contents__products__item">
-            <img class="success_order_contents__products__item__image" src="../images/demo/cart/cart-product.png" />
-            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
-            <div class="success_order_contents__products__item__cost">
-              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
-              <span class="success_order_contents__products__item__price">645 000 x 3</span>
-            </div>
+          <li class="account_addresses__list__item">
+            <span class="account_addresses__list__item__heading">Санкт-Петербург</span>
+            <span class="account_addresses__list__item__address">ул.Барклая 10, ТЦ «БАГРАТИОНОВСКИЙ», помещение А54</span>
+            <span class="account_addresses__list__item__actions">
+              <span class="account_addresses__list__item__actions__change popup__opener" onclick="openDialog('Delivery')" aria-controls="Delivery" alt="Редактировать адрес доставки">Изменить адрес</span>
+              <span class="account_addresses__list__item__actions__delete popup__opener" onclick="openDialog('DeleteAddress')" aria-controls="DeleteAddress" alt="Удалить адрес доставки">Удалить адрес</span>
+            </span>
+          </li>
+          <li class="account_addresses__list__item">
+            <span class="account_addresses__list__item__add"></span>
           </li>
         </ul>
-        <div class="success_order_contents__summary">
-          <span class="success_order_contents__summary__heading">Товары (2) на сумму 1 290 000 ₽</span>
-          <div class="success_order_contents__summary__detalization">
-            <span class="success_order_contents__summary__detalization__name">Скидка:</span>
-            <span class="success_order_contents__summary__detalization__summ">400 000 ₽</span>
-          </div>
-          <div class="success_order_contents__summary__detalization">
-            <span class="success_order_contents__summary__detalization__name">Скидка по промокоду:</span>
-            <span class="success_order_contents__summary__detalization__summ">400 000 ₽</span>
-          </div>
-          <span class="success_order_contents__summary__heading">Итого: 1 290 000 ₽</span>
-        </div>
-      </section>
-      <section class="buy_more section wrapper--global">
-        <a class="buy_more__button button button--black" href="../catalogue.html">Купить что-нибудь еще</a>
+        <button class="account_addresses__button button button--pink">Сохранить изменения</button>
       </section>
     </main>
     <footer class="footer">
@@ -772,6 +686,40 @@
             <label class="popup_menu__container__navigation__item__label button" for="content__11">Туризм GPS навигаторы и эхолоты</label>
           </li>
         </ul>
+      </div>
+    </dialog>
+    <dialog class="popup_delivery popup" aria-label="Редактировать адрес доставки" id="Delivery">
+      <div class="popup_delivery__container popup__container">
+        <span class="popup_delivery__container__heading">Укажите адрес доставки</span>
+        <span class="popup_delivery__container__close icon--close" onclick="closeDialog()"></span>
+        <div class="popup_delivery__container__form">
+          <input class="popup_delivery__container__form__input" placeholder="Город" />
+          <input class="popup_delivery__container__form__input" placeholder="Улица" />
+          <div class="popup_delivery__container__form__group">
+            <input class="popup_delivery__container__form__input" placeholder="Подъезд" />
+            <input class="popup_delivery__container__form__input" placeholder="Этаж" />
+            <input class="popup_delivery__container__form__input" placeholder="Квартира" />
+            <input class="popup_delivery__container__form__input" placeholder="Домофон" />
+          </div>
+          <textarea class="popup_delivery__container__form__input popup_delivery__container__form__input--textarea" placeholder="Комментарий"></textarea>
+        </div>
+        <span class="popup_delivery__container__button button button--pink" onclick="closeDialog()">Готово</span>
+        <div class="popup_delivery__container__map" id="popup_delivery__map"></div>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95f762cd1b2901d9765805705d3a5c157235081e11f563b4d8b358b06b0ce2bc&amp;width=100%25&amp;height=100%&amp;id=popup_delivery__map&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div>
+    </dialog>
+    <dialog class="popup_delete_address popup" aria-label="Удалить адрес доставки" id="DeleteAddress">
+      <div class="popup_delete_address__container popup__container">
+        <span class="popup_delete_address__container__heading">Удалить адрес?</span>
+        <span class="popup_delete_address__container__close icon--close" onclick="closeDialog()"></span>
+        <div class="popup_delete_address__container__item">
+          <span class="popup_delete_address__item__heading">Санкт-Петербург</span>
+          <span class="popup_delete_address__item__address">Мебельная улица 19 к 2, подъезд 4, этаж 10, квартира 712</span>
+        </div>
+        <div class="popup_delete_address__container__buttons">
+          <button class="popup_delete_address__container__buttons__cancel button button--white">Отмена</button>
+          <button class="popup_delete_address__container__buttons__confirm button button--pink">Удалить</button>
+        </div>
       </div>
     </dialog>
     <script src="./js/custom.js"></script>
