--- a/delivery.html
+++ b/delivery.html
@@ -76,7 +76,7 @@
                 <span class="header__bottom__container__column__services__item__link link--grey link_icon--search popup__opener" onclick="openDialog('Search');" aria-controls="Search" alt="Поиск">Поиск</s>
               </li>
               <li class="header__bottom__container__column__services__item">
-                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="#">Избранное</a>
+                <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="../favourites.html">Избранное</a>
               </li>
               <li class="header__bottom__container__column__services__item">
                 <a class="header__bottom__container__column__services__item__link link--grey link_icon--cart" href="#">Корзина</a>
