--- a/account.html
+++ b/account.html
@@ -207,7 +207,7 @@
           <input class="account__form__input" type="text" placeholder="Фамилия" />
           <input class="account__form__input" type="text" placeholder="Телефон" />
           <input class="account__form__input" type="text" placeholder="Email" />
-          <input class="account__form__input" type="text" placeholder="Дата рождения" />
+          <input class="account__form__input" type="date" max="2025-03-25" placeholder="Дата рождения" />
           <button class="account__form__button button button--pink">Сохранить изменения</button>
         </form>
         <div class="account__disclamer">Нажимая на кнопку, вы соглашаетесь с <a href="../oferta.html">Условиями обработки персональных данных</a>, а также c <a href="../oferta.html">Условиями публичной оферты</a>.</div>
