--- a/account-orders.html
+++ b/account-orders.html
@@ -197,7 +197,7 @@
       <section class="account section wrapper--global">
         <h1 class="account__heading">Личный кабинет</h1>
         <ul class="account__navigation">
-          <li class="account__navigation__item button button--white"><a href="../account-orders.html">Данные профиля</a></li>
+          <li class="account__navigation__item button button--white"><a href="../account.html">Данные профиля</a></li>
           <li class="account__navigation__item button button--white"><a href="../account-address.html">Адреса доставки</a></li>
           <li class="account__navigation__item button account__navigation__item--active">Мои заказы</li>
           <li class="account__navigation__item button button--white"><a href="../account-favourites.html">Избранное</a></li>
